--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "cypress": "cypress open"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.12.4",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.6",
-    "quasar": "^2.0.0"
+    "quasar": "^2.5.2",
+    "vue": "^3.2.29",
+    "vue-router": "4.0.12"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
-    "@quasar/app": "^3.0.0",
+    "@quasar/app": "^3.3.2",
     "cypress": "^8.3.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
